# WinTrack

./: .gitattributes  .gitignore  LICENSE  PROJECT_STATE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  windows_appuser_model_search.txt  windows_shell_properties_search.txt
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: browser_pwa.rs  lib.rs  main.rs
src-tauri/src/analytics/: mod.rs
src-tauri/src/database/: mod.rs
src-tauri/src/export/: mod.rs
src-tauri/src/monitoring/: mod.rs
src-tauri/src/services/: mod.rs
src-tauri/src/tray/: mod.rs
src/components/charts/: CategoryPieChart.tsx  HourlyHeatmap.tsx  WeeklyBarChart.tsx
src/components/layout/: Header.tsx  Sidebar.tsx
src/components/ui/: index.tsx
src/pages/: AppBreakdown.tsx  DailyAnalytics.tsx  Dashboard.tsx  ExportCenter.tsx  LimitWarning.tsx  MonthlyAnalytics.tsx  SettingsPage.tsx  SoftLockPage.tsx  TimelineView.tsx  WeeklyAnalytics.tsx
src/store/: index.ts
src/types/: index.ts
src/utils/: api.ts  helpers.ts
